--- a/package.json
+++ b/package.json
@@ -14,13 +14,22 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "axios": "^1.12.2",
+    "axos": "^0.0.1",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
     "mysql2": "^3.14.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.6.2",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
