--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx  watch src/index-mongo.ts",
-    "dev:mongo": "tsx  watch src/index-mongo.ts",
-    "build": "npm install && tsc",
-     "start": "ts-node src/index-mongo.ts",
+    "dev": "tsx watch src/index-mongo.ts",
+    "dev:mongo": "tsx watch src/index-mongo.ts",
+    "build": "tsc",
+    "start": "tsx src/index-mongo.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "description": "",
-  "type": "module",
   "dependencies": {
     "axios": "^1.12.2",
     "axos": "^0.0.1",
